# trains

./: .gitignore  README.md  pyproject.toml
data/: example.json  schema.json
script/: clean  example.py  script.py
src/trains/: __init__.py  exceptions.py  serialization.py  util.py
src/trains/env/: __init__.py  base.py  branch.py  components.py  deadend.py  entities.py  graph.py  switch.py  system.py  track.py  train.py
src/trains/env2/: graph.py
src/trains/env2/components/: __init__.py  switch.py  train.py
src/trains/rl/: __init__.py  actor.py  adapter.py  critic.py  util.py
src/trains/ser/: __init__.py  system.py
src/trains/serialization/: __init__.py  models.py  util.py
test/: test_actor.py  test_collisions.py  test_compile.py  test_critic.py  test_encode.py  test_init.py  test_rl_adapter.py  test_schema.py  test_simulate.py
test/data/: collision_body_system.json  collision_system.json  collision_touch_system.json  graph.json  init_system.json  simulate_system.json  step_collision_system.json  system.json
tool/: install  test
