[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trains"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "bidict>=0.23.1",
    "fnutil>=0.0.1",
    "jsonschema>=4.25.0",
    "networkx>=3.5",
    "pydantic>=2.12.5",
    "torch",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
]

